--- a/09-Guessing Game Challenge.ipynb
+++ b/09-Guessing Game Challenge.ipynb
@@ -138,15 +138,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n",
+      "Can you guess the number?67\n",
+      "Cold!\n",
+      "Can you guess the number?45\n",
+      "wARMER!!\n",
+      "Can you guess the number?34\n",
+      "COLDER!!\n",
+      "Can you guess the number?46\n",
+      "wARMER!!\n",
+      "Can you guess the number?50\n",
+      "COLDER!!\n",
+      "Can you guess the number?45\n",
+      "wARMER!!\n",
+      "Can you guess the number?48\n",
+      "wARMER!!\n",
+      "Can you guess the number?47\n",
+      "You guessed it right. You took 8 tries to get it.\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
+    "import random\n",
+    "guesses=[]\n",
+    "num=random.randint(1,100)\n",
+    "print(num)\n",
+    "while True:    \n",
+    "    num_user=int(input(\"Can you guess the number?\"))\n",
+    "    guesses.append(num_user)\n",
+    "    if(num==num_user):\n",
+    "        print(\"You guessed it right. You took {} tries to get it.\".format(len(guesses)))\n",
+    "        break\n",
+    "    else:\n",
+    "        if(num_user <0 or num_user>100):\n",
+    "            print(\"Number is out of bounds!! Try again.\")\n",
+    "        else:\n",
+    "            if(len(guesses) ==1):\n",
+    "                if(abs(num-num_user) >10):\n",
+    "                    print(\"Cold!\")\n",
+    "                else:\n",
+    "                    print(\"Warm!\")\n",
+    "            else:\n",
+    "                if(abs(guesses[-1]-num)<abs(num-guesses[-2])):\n",
+    "                    print(\"WARMER!!\")\n",
+    "                else:\n",
+    "                    print(\"COLDER!!\")\n",
+    "   \n",
     "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
+    "    "
    ]
   },
   {
@@ -175,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
